--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.0",
     "pinia": "^2.1.7",
+    "primevue": "^4.1.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
