--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.0",
+    "pinia": "^3.0.3",
     "primevue": "^4.1.0",
     "vue": "^3.4.29"
   },
